--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=/home/matheus/.netbeans/8.1/config/GlassFishEE6/Properties/gfv317239644.properties
+deploy.ant.properties.file=/home/joaolucas/.netbeans/8.1/config/GlassFishEE6/Properties/gfv3212450558.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/matheus/glassfish-4.1.1/glassfish/domains/domain1
-j2ee.server.home=/home/matheus/glassfish-4.1.1/glassfish
-j2ee.server.instance=[/home/matheus/glassfish-4.1.1/glassfish:/home/matheus/glassfish-4.1.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/home/matheus/glassfish-4.1.1
+j2ee.server.domain=/home/joaolucas/glassfish-4.1.1/glassfish/domains/domain1
+j2ee.server.home=/home/joaolucas/glassfish-4.1.1/glassfish
+j2ee.server.instance=[/home/joaolucas/glassfish-4.1.1/glassfish:/home/joaolucas/glassfish-4.1.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=/home/joaolucas/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=/home/matheus/.netbeans/8.1/build.properties
+user.properties.file=/home/joaolucas/.netbeans/8.1/build.properties
