--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.java-json.jar=web/WEB-INF/lib/java-json.jar
+file.reference.json-simple-1.1.1.jar=web/WEB-INF/lib/json-simple-1.1.1.jar
+file.reference.mysql-connector-java-5.1.39-bin.jar=web/WEB-INF/lib/mysql-connector-java-5.1.39-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +44,10 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.java-json.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
